<resources>
    <string name="app_name">Qremind</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_cust_prof">Profile</string>
    <string name="title_activity_buss_prof">Shop profile</string>
    <string name="title_activity_register">Create account</string>
    <string name="title_activity_choosetask">Dash board</string>
    <string name="title_activity_business_queue_dashboard">BusinessQueueDashboard</string>
    <string name="title_activity_customer_home">Customer</string>
    <string name="title_activity_customer_get_queue">Get queue</string>

    <!-- Strings -->
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- hint strings -->
    <string name="hint_vendor_name">Enter vendor name</string>
    <string name="hint_vendor_category">Enter shop category</string>
    <string name="hint_vendor_location">Enter shop location</string>
    <string name="hint_vendor_email">something@xxxxx.com</string>
    <string name="hint_vendor_number">Enter shop phone number</string>
    <string name="hint_fname">Enter first name</string>
    <string name="hint_lname">Enter last name</string>
    <string name="hint_phone_no">Enter phone number</string>
    <string name="hint_email">something@xxxxx.com</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="hint_email_hp_no">Email/Hp No</string>

    <!-- text string -->
    <string name="text_cust_login">Customer Login</string>
    <string name="text_vendor_login">Vendor Login</string>
    <string name="text_pax_number">No. of pax</string>
    <string name="text_first_name">First Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_email">Email</string>
    <string name="text_phone_no">Phone No</string>
    <string name="text_password">Password</string>
    <string name="text_confimed_pwd">Confirm Password</string>
    <string name="text_customer">Customer</string>
    <string name="text_vendor">Vendor</string>
    <string name="text_role">Role</string>
    <string name="text_register">Register</string>
    <string name="text_update">Update</string>
    <string name="text_shop_name">Shop Name</string>
    <string name="text_category">Category</string>
    <string name="text_location">Location</string>
    <string name="text_telephone">Telephone</string>
    <string name="text_logout">Logout</string>
    <string name="text_login">Log In</string>
    <string name="text_create_account">Create Account</string>
    <string name="text_allow">Allow</string>
    <string name="text_require_for_time_extension">Queue no request for time extension</string>
    <string name="text_next">Next</string>
    <string name="text_current_queue_number">Current Queue No.</string>
    <string name="text_number_of_people_served">No. of people served</string>
    <string name="text_number_of_people_in_queue">No. of people in Queue</string>
    <string name="text_new_queue">New Queue</string>
    <string name="text_please_rate_service">Wait before you go, please rate the service</string>
    <string name="text_claim">Claim</string>
    <string name="text_remaining_queue">Remaining Queues</string>
    <string name="text_estimated_waiting_time">Estimated Waiting Time</string>
    <string name="text_refresh">Refresh</string>
    <string name="text_leave_queue">Leave Queue</string>
    <string name="text_get_queue">Get Queue</string>
    <string name="text_ratings">Ratings</string>
    <string name="text_manage_queue">Manage Queue</string>
    <string name="text_settings">Settings</string>
    <string name="text_create_shop">Create shop</string>
    <string name="text_queue_no">Queue No</string>
    <string name="text_leave">Leave</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_try_again">Try again</string>
    <string name="text_vendor_name_to_be_changed">Vendor Name(to be changed)</string>
    <string name="text_underscore">_____</string>
    <string name="text_people_in_queue">People in Queue</string>
    <string name="text_shop_email">Shop Email</string>
    <string name="text_phone_number">Phone Number</string>
    <string name="text_No_one_is_in_your_queue">No one is in your queue</string>
    <string name="text_zack">Zack</string>
    <string name="text_no_internet_connection">No internet\n connection</string>
    <string name="text_inbox">Inbox</string>
    <string name="text_30">30</string>
    <string name="text_4dash">----</string>
    <string name="text_Next">Next: </string>
    <string name="text_4zeros">0000</string>
    <string name="text_next_customer">Next Customer</string>
    <string name="text_remove">Remove</string>
    <string name="text_din_tai_fung">Shop: Din Tai Fung</string>
    <string name="text_phone_96655485">Phone no: 96655485</string>
    <string name="text_queue_96655485">Queue no: 96655485</string>
    <string name="text_queue_number">Queue Number</string>
    <string name="text_1234">1234</string>
    <string name="text_1_October_1992">01/21/1992</string>
    <string name="text_07_25">07:25</string>
    <string name="text_DQ">DQ</string>
    <string name="text_cannot_load_data">Oops, could not load data</string>
    <string name="text_retry">Retry</string>
    <string name="text_in_queue">In Queue: </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="notification_title">QRemind Notification</string>
    <string name="notification_text">Your turn is up</string>

</resources>
