<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <!-- Use same ID to use built-in features -->
    <RelativeLayout
        android:id="@+id/nextQLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        >
        <TextView
            android:id="@+id/nextQueueNo_TV"
            android:layout_marginEnd="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="25dp"
            android:text="@string/text_4dash"/>

        <TextView
            android:id="@+id/nextQ_TV"
            android:layout_marginStart="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/nextQueueNo_TV"
            android:textSize="20dp"
            android:layout_centerVertical="true"
            android:text="@string/text_Next"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/currentQueueNo_TV"
        android:layout_marginStart="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nextQLayout"
        android:textSize="50dp"
        android:text="@string/text_4zeros"
        android:layout_centerHorizontal="true"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/currentQueueNo_TV"
        android:text="@string/text_next_customer"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:id="@+id/nextCustomerBtn"
        android:layout_centerHorizontal="true"
        android:visibility="visible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/currentQueueNo_TV"
        android:gravity="center_horizontal">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:text="@string/text_claim"
            android:background="@color/card_undobar_material_text_color"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/vendor_curr_queue_claim_Btn"
            android:visibility="invisible"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:text="@string/text_remove"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/vendor_curr_queue_removeBtn"
            android:visibility="invisible"/>
    </LinearLayout>
</RelativeLayout>