<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".Customer.ProfilePageActivity">

        <include layout="@layout/include_toolbar"/>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="#efefef">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView android:id="@+id/custProfile_picture"
                        android:src="@drawable/unknown_person"
                        android:layout_width="150sp"
                        android:layout_height="150sp"
                        android:layout_weight="0.26"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>

                    <TextView android:id="@+id/custProfile_fName_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/custProfile_picture"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_first_name"
                        android:visibility="invisible"/>

                    <EditText android:id="@+id/custProfile_fName_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_fname"
                        android:layout_gravity="center_horizontal"
                        android:layout_below="@+id/custProfile_fName_TV"
                        android:layout_alignParentStart="true"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <TextView android:id="@+id/custProfile_lName_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/custProfile_fName_ET"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_last_name"
                        android:visibility="invisible"/>

                    <EditText android:id="@+id/custProfile_lName_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_lname"
                        android:layout_gravity="center_horizontal"
                        android:layout_below="@+id/custProfile_lName_TV"
                        android:layout_alignParentStart="true"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <TextView android:id="@+id/custProfile_phone_no_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/custProfile_lName_ET"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_phone_number"
                        android:visibility="invisible"/>

                    <EditText android:id="@+id/custProfile_phone_no_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_phone_no"
                        android:inputType="phone"
                        android:layout_gravity="center_horizontal"
                        android:layout_below="@+id/custProfile_phone_no_TV"
                        android:layout_alignParentStart="true"
                        android:editable="false"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <TextView android:id="@+id/custProfile_email_TV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/custProfile_phone_no_ET"
                        android:layout_alignParentStart="true"
                        android:textColor="@color/black"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/text_email"
                        android:visibility="invisible"/>

                    <EditText android:id="@+id/custProfile_email_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_email"
                        android:layout_gravity="center_horizontal"
                        android:inputType="textEmailAddress"
                        android:layout_below="@+id/custProfile_email_TV"
                        android:layout_alignParentStart="true"
                        android:editable="false"
                        android:maxLines="1"
                        android:singleLine="true" />

                    <Button android:id="@+id/custProfile_udpatebtn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:background="@color/colorAccent"
                        android:layout_below="@+id/custProfile_email_ET"
                        android:text="@string/text_update"/>
                </RelativeLayout>
            </ScrollView>
        </RelativeLayout>
        </LinearLayout>



    <!-- Side navigation drawer UI -->
    <include layout="@layout/include_main_nav_drawer"/>

</android.support.v4.widget.DrawerLayout>