<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <include layout="@layout/include_toolbar"/>

        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView android:id="@+id/vendor_qr_claim_shop_name_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="30sp"
                android:layout_marginBottom="10sp"
                android:textSize="35sp"
                android:textColor="#000000"
                android:text="@string/text_din_tai_fung"/>

            <TextView android:id="@+id/vendor_qr_claim_phone_no_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vendor_qr_claim_shop_name_TV"
                android:gravity="center_horizontal"
                android:textSize="25sp"
                android:textColor="#000000"
                android:text="@string/text_phone_96655485"/>

            <TextView android:id="@+id/vendor_qr_claim_queue_no_TV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vendor_qr_claim_phone_no_TV"
                android:gravity="center_horizontal"
                android:textSize="20sp"
                android:textColor="#000000"
                android:layout_marginBottom="10sp"
                android:text="@string/text_queue_96655485"/>

            <ImageView android:id="@+id/vendor_qr_code_ImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/vendor_qr_claim_queue_no_TV"/>

        </RelativeLayout>

</LinearLayout>