<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#efefef">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/custGetQueue_paxnumber_ET"
            android:hint="@string/text_pax_number"
            android:layout_gravity="center_horizontal"
            android:layout_above="@+id/custGetQueue_getqueue_btn"
            android:layout_alignParentStart="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_get_queue"
            android:id="@+id/custGetQueue_getqueue_btn"
            android:layout_gravity="center_horizontal"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="@color/colorAccent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/custGetQueue_shopname_TV"
            android:layout_above="@+id/custGetQueue_paxnumber_ET"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:text="@string/text_vendor_name_to_be_changed"/>

    </RelativeLayout>

    <!-- Side navigation drawer UI -->
    <ListView
        android:id="@+id/navList"
        android:layout_width="200dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffeeeeee"/>

</android.support.v4.widget.DrawerLayout>