<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efefef"
        tools:context=".Customer.CustomerHomePageActivity">

        <include layout="@layout/include_toolbar"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_manage_queue"
                android:id="@+id/choosetask_managequeuebtn"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorAccent"
                android:layout_marginLeft="59dp"
                android:layout_marginStart="59dp"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_settings"
                android:id="@+id/choosetask_settingsbtn"
                android:layout_gravity="center_horizontal"
                android:background="@color/colorAccent"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/choosetask_managequeuebtn"
                android:layout_toEndOf="@+id/choosetask_managequeuebtn"
                android:layout_marginLeft="67dp"
                android:layout_marginStart="67dp"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/choosetask_logoutbtn"
                android:text="@string/text_logout"
                android:background="#FF3232"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>
        </RelativeLayout>
    </LinearLayout>

    <include layout="@layout/include_main_nav_drawer"/>

</android.support.v4.widget.DrawerLayout>